--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>spring-security-lab1</module>
         <module>spring-security-lab2</module>
+        <module>spring-security-lab3</module>
     </modules>
 
 </project>
