Added domain model and services

--- a/spring-security-lab3/src/main/resources/application.properties
+++ b/spring-security-lab3/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
-logging.level.org.springframework.security=trace
-logging.level.org.thymeleaf=trace
+security.user.password=none
+logging.level.org.springframework.security=info
+logging.level.org.thymeleaf=info
