--- a/spring-security-lab2/src/main/resources/application.properties
+++ b/spring-security-lab2/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 logging.level.org.springframework.security=trace
 logging.level.org.thymeleaf=trace
+
+server.session.cookie.secure=false
+server.session.cookie.http-only=true
+server.session.tracking-modes=cookie
+
+server.error.whitelabel.enabled=true
