--- a/spring-security-lab3/src/main/resources/application.properties
+++ b/spring-security-lab3/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.thymeleaf.mode=HTML5
 security.user.password=none
 logging.level.org.springframework.security=info
 logging.level.org.thymeleaf=info
+
+server.ssl.key-store=classpath:ssl/ssl.jks
+server.ssl.enabled=true
+server.ssl.key-alias=localhost
+server.ssl.key-password=secret
+server.ssl.key-store-password=secret
+server.port=8443
+
