--- a/spring-security-uitest-lab/pom.xml
+++ b/spring-security-uitest-lab/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>info.novatec.testit</groupId>
+            <artifactId>livingdoc-cli</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>info.novatec.testit</groupId>
             <artifactId>webtester-support-firefox</artifactId>
             <version>1.1.0</version>
         </dependency>
