--- a/spring-security-lab3/src/main/resources/application.properties
+++ b/spring-security-lab3/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.mode=HTML5
 security.user.password=none
 logging.level.org.springframework.security=info
 logging.level.org.thymeleaf=info
-
+spring.h2.console.enabled=true
 #server.ssl.key-store=classpath:ssl/ssl.jks
 #server.ssl.enabled=true
 #server.ssl.key-alias=localhost
