--- a/spring-security-lab3/src/main/resources/application.properties
+++ b/spring-security-lab3/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.h2.console.enabled=true
 #server.ssl.key-password=secret
 #server.ssl.key-store-password=secret
 #server.port=8443
+server.port = 9090
 
