--- a/spring-security-oauth-authserver-lab/src/main/resources/application.properties
+++ b/spring-security-oauth-authserver-lab/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 logging.level.org.springframework.security.oauth2=debug
 server.port=9090
 server.context-path=/uaa
+security.enable-csrf=false
 security.user.name=admin
 security.user.password=secret
 security.user.role=USER,AUDITOR
